<resources>

    <string name="app_name">Sync Task</string>
    <string name="default_web_client_id">601701551928-mabu0ln6kt508h8q07p2hm69j0ccj391.apps.googleusercontent.com</string>

    <string name="add_task_content_description">Add Task</string>
    <string name="logo_content_description">SyncTask Logo</string>
    <string name="delete_task_content_description">Delete Task</string>
    <string name="task_type_icon_desc">Task Type Icon</string>

    <string name="app_tagline">Share tasks with your partner</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string name="pair_with_partner_title">Join a Space</string>
    <string name="your_partner_code_label">Your Partner Code</string>
    <string name="share_code_instruction">Share this code with your partner.</string>
    <string name="enter_partner_code_label">Enter Invite Code</string>
    <string name="partner_code_hint">6-Digit Invite Code</string>
    <string name="pair_button_text">Join Space</string>


    <string name="create_new_item">Create New
Item</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description (Optional)</string>
    <string name="type_hint">Type</string>
    <string name="due_date_hint">Due Date (Optional)</string>
    <string name="create_task_button">Create Task</string>
    <string name="scope_hint">Task Scope</string>
    <string name="due_date_label">Due:</string> <string name="task_creator_label_you">You</string>
    <string name="task_creator_label_partner">Partner</string>
    <string name="task_creator_label_local">Not Synced</string>

    <string name="no_tasks_message">No tasks here yet!\nPull down to refresh.</string>

    <string name="go_to_tasks_button">View Shared Tasks</string>
    <string name="pair_with_partner_button">Pair with Partner</string>
    <string name="profile_and_settings_button">Profile &amp;
Settings</string>
    <string name="status_paired_text">You are paired with a partner</string>

    <string name="save_changes_button">Save Changes</string>
    <string name="unpair_button">Unpair from Partner</string>
    <string name="logout_button">Logout</string>

    <string name="owner_my_task">My Task</string>
    <string name="owner_partners_task">Partner\'s Task</string>

    <string name="scope_shared">Shared (Anyone can edit/complete)</string>
    <string name="scope_individual">Individual (Only I can edit)</string>
    <string name="scope_assigned">Assign (Partner completes it)</string>

    <string name="owner_hint">Owner</string>
    <string name="owner_me">Me (Individual Task)</string>
    <string name="owner_partner">Partner (Assigned Task)</string>
    <string name="task_details_title">Task Details</string>
    <string name="edit_task_menu">Edit</string>
    <string name="delete_task_menu">Delete</string>
    <string name="description_label">Description</string>
    <string name="due_date_label_detail">Due Date</string>
    <string name="priority_label">Priority</string>
    <string name="scope_label">Scope</string>
    <string name="creator_label">Created
by</string>
    <string name="status_label">Mark as complete</string>
    <string name="progress_label">Progress</string> <string name="not_set">Not set</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_task_dialog_title">Delete Task?</string>
    <string name="delete_task_dialog_message">Are you sure you want to delete this task?
This action cannot be undone.</string>

    <string name="scope_shared_short">Shared</string>
    <string name="scope_individual_short">Individual</string>
    <string name="scope_assigned_short">Assigned</string>

    <string name="cannot_complete_task">You do not have permission to change the status of this task.</string>
    <string name="cannot_update_progress">You do not have permission to update the progress of this task.</string>

    <string name="effort_label">Effort (1=Low, 5=High)</string>
    <string name="effort_value_label">Effort</string>

    <string name="shared_spaces_title">Shared Spaces</string>
    <string name="personal_links_title">Personal Links</string>
    <string name="add_space_fab_desc">Add Space</string>
    <string name="view_profile_button">Profile</string>
    <string name="welcome_message">Welcome, %s!</string>
    <string name="tasks_with_partner">Tasks with %s</string>

    <string name="personal_link_options">Link Options</string>
    <string name="unlink_partner_title">Unlink Partner?</string>
    <string name="unlink_partner_message">Are you sure you want to unlink from this partner?
This will delete all tasks in this link.</string>
    <string name="unlink">Unlink</string>

    <string name="link_new_partner">Link New Partner</string>
    <string name="create_shared_space">Create Shared Space</string>
    <string name="join_shared_space">Join Shared Space</string>
    <string name="your_user_id">Your User ID (Share this with your partner)</string>
    <string name="enter_partner_uid">Enter your partner\'s User ID</string>
    <string name="partner_uid_hint">Partner\'s UID</string>
    <string name="link_button">Link</string>

    <string name="completed_tasks_title">Completed Tasks</string>
    <string name="settings_title_account">Account</string>
    <string name="settings_title_data">Data &amp; Archive</string>
    <string name="settings_title_actions">Account Actions</string>
    <string name="settings_button_all_tasks">View All Completed Tasks</string>

</resources>